--- a/CBriscola.Avalonia/CBriscola.Avalonia.csproj
+++ b/CBriscola.Avalonia/CBriscola.Avalonia.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove=".gitignore" />
+    <None Remove="background.jpg" />
     <None Remove="resources\images\0.png" />
     <None Remove="resources\images\1.png" />
     <None Remove="resources\images\10.png" />
@@ -53,6 +54,7 @@
     <None Remove="resources\images\retro_carte_pc.png" />
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Include="background.jpg" />
     <AvaloniaResource Include="resources\images\0.png" />
     <AvaloniaResource Include="resources\images\1.png" />
     <AvaloniaResource Include="resources\images\10.png" />
