--- a/CBriscola.Avalonia/CBriscola.Avalonia.csproj
+++ b/CBriscola.Avalonia/CBriscola.Avalonia.csproj
@@ -54,7 +54,6 @@
     <None Remove="resources\images\retro_carte_pc.png" />
   </ItemGroup>
   <ItemGroup>
-    <AvaloniaResource Include="background.jpg" />
     <AvaloniaResource Include="resources\images\0.png" />
     <AvaloniaResource Include="resources\images\1.png" />
     <AvaloniaResource Include="resources\images\10.png" />
@@ -112,6 +111,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.18" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 </Project>
