Dedicato a Francesca, "QUELLA" che mi ha aspettato per 20 anni, ed ora si diverte a prendermi in giro!

--- a/CBriscola.Avalonia/CBriscola.Avalonia.csproj
+++ b/CBriscola.Avalonia/CBriscola.Avalonia.csproj
@@ -10,92 +10,7 @@
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove=".gitignore" />
-    <None Remove="background.jpg" />
-    <None Remove="resources\images\0.png" />
-    <None Remove="resources\images\1.png" />
-    <None Remove="resources\images\10.png" />
-    <None Remove="resources\images\11.png" />
-    <None Remove="resources\images\12.png" />
-    <None Remove="resources\images\13.png" />
-    <None Remove="resources\images\14.png" />
-    <None Remove="resources\images\15.png" />
-    <None Remove="resources\images\16.png" />
-    <None Remove="resources\images\17.png" />
-    <None Remove="resources\images\18.png" />
-    <None Remove="resources\images\19.png" />
-    <None Remove="resources\images\2.png" />
-    <None Remove="resources\images\20.png" />
-    <None Remove="resources\images\21.png" />
-    <None Remove="resources\images\22.png" />
-    <None Remove="resources\images\23.png" />
-    <None Remove="resources\images\24.png" />
-    <None Remove="resources\images\25.png" />
-    <None Remove="resources\images\26.png" />
-    <None Remove="resources\images\27.png" />
-    <None Remove="resources\images\28.png" />
-    <None Remove="resources\images\29.png" />
-    <None Remove="resources\images\3.png" />
-    <None Remove="resources\images\30.png" />
-    <None Remove="resources\images\31.png" />
-    <None Remove="resources\images\32.png" />
-    <None Remove="resources\images\33.png" />
-    <None Remove="resources\images\34.png" />
-    <None Remove="resources\images\35.png" />
-    <None Remove="resources\images\36.png" />
-    <None Remove="resources\images\37.png" />
-    <None Remove="resources\images\38.png" />
-    <None Remove="resources\images\39.png" />
-    <None Remove="resources\images\4.png" />
-    <None Remove="resources\images\5.png" />
-    <None Remove="resources\images\6.png" />
-    <None Remove="resources\images\7.png" />
-    <None Remove="resources\images\8.png" />
-    <None Remove="resources\images\9.png" />
-    <None Remove="resources\images\retro_carte_pc.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AvaloniaResource Include="resources\images\0.png" />
-    <AvaloniaResource Include="resources\images\1.png" />
-    <AvaloniaResource Include="resources\images\10.png" />
-    <AvaloniaResource Include="resources\images\11.png" />
-    <AvaloniaResource Include="resources\images\12.png" />
-    <AvaloniaResource Include="resources\images\13.png" />
-    <AvaloniaResource Include="resources\images\14.png" />
-    <AvaloniaResource Include="resources\images\15.png" />
-    <AvaloniaResource Include="resources\images\16.png" />
-    <AvaloniaResource Include="resources\images\17.png" />
-    <AvaloniaResource Include="resources\images\18.png" />
-    <AvaloniaResource Include="resources\images\19.png" />
-    <AvaloniaResource Include="resources\images\2.png" />
-    <AvaloniaResource Include="resources\images\20.png" />
-    <AvaloniaResource Include="resources\images\21.png" />
-    <AvaloniaResource Include="resources\images\22.png" />
-    <AvaloniaResource Include="resources\images\23.png" />
-    <AvaloniaResource Include="resources\images\24.png" />
-    <AvaloniaResource Include="resources\images\25.png" />
-    <AvaloniaResource Include="resources\images\26.png" />
-    <AvaloniaResource Include="resources\images\27.png" />
-    <AvaloniaResource Include="resources\images\28.png" />
-    <AvaloniaResource Include="resources\images\29.png" />
-    <AvaloniaResource Include="resources\images\3.png" />
-    <AvaloniaResource Include="resources\images\30.png" />
-    <AvaloniaResource Include="resources\images\31.png" />
-    <AvaloniaResource Include="resources\images\32.png" />
-    <AvaloniaResource Include="resources\images\33.png" />
-    <AvaloniaResource Include="resources\images\34.png" />
-    <AvaloniaResource Include="resources\images\35.png" />
-    <AvaloniaResource Include="resources\images\36.png" />
-    <AvaloniaResource Include="resources\images\37.png" />
-    <AvaloniaResource Include="resources\images\38.png" />
-    <AvaloniaResource Include="resources\images\39.png" />
-    <AvaloniaResource Include="resources\images\4.png" />
-    <AvaloniaResource Include="resources\images\5.png" />
-    <AvaloniaResource Include="resources\images\6.png" />
-    <AvaloniaResource Include="resources\images\7.png" />
-    <AvaloniaResource Include="resources\images\8.png" />
-    <AvaloniaResource Include="resources\images\9.png" />
-    <AvaloniaResource Include="resources\images\retro_carte_pc.png" />
+    <AvaloniaResource Include="resources\images\**" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
