Aggiunti i liv elli, ed anche la possibilità per la cpu di giocare per primo.

--- a/CBriscola.Avalonia/CBriscola.Avalonia.csproj
+++ b/CBriscola.Avalonia/CBriscola.Avalonia.csproj
@@ -8,6 +8,7 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+	<SelfContained>true</SelfContained>
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="resources\images\**" />
