--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /CBriscola.Avalonia/obj
 /cbriscola.avalonia-setup/bin/Release/net472
 /cbriscola.avalonia-setup/obj
+/CBriscola.Avalonia/bin/Debug/net9.0-windows10.0.26100.0
+/cbriscola.avalonia-setup/bin/Debug/net472
