--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /cbriscola.avalonia-setup/obj
 /CBriscola.Avalonia/bin/Debug/net9.0-windows10.0.26100.0
 /cbriscola.avalonia-setup/bin/Debug/net472
+/CBriscola.Avalonia/bin/Debug/net9.0-windows10.0.22621.0
